k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opensearch-cluster-hot
  labels:
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch-cluster-hot
spec:
  serviceName: opensearch-cluster-headless
  selector:
    matchLabels:
      app.kubernetes.io/name: opensearch
      app.kubernetes.io/instance: opensearch-cluster-hot
  replicas: 3
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
        volume.autoscaler.kubernetes.io/scale-above-percent: "70"
        volume.autoscaler.kubernetes.io/scale-up-percent: "50"
    spec:
      accessModes:
      - "ReadWriteOnce"
      resources:
        requests:
          storage: "8Gi"
      storageClassName: "opensearch-gp3"
  template:
    metadata:
      name: "opensearch-cluster-hot"
      labels:
        app.kubernetes.io/name: opensearch
        app.kubernetes.io/instance: opensearch-cluster-hot
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      serviceAccountName: "opensearch"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - opensearch-cluster-hot
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - opensearch
      terminationGracePeriodSeconds: 120
      volumes:
      - name: config
        configMap:
          name: opensearch-config
      - name: security-config-data
        secret:
          secretName: opensearch-securityconfig
      - name: node-cert
        secret:
          secretName: opensearch-cert
      enableServiceLinks: false
      containers:
      - name: opensearch
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        image: public.ecr.aws/r2h3l6e4/pingcloud-monitoring/opensearch/dev:v1.19-release-branch-latest
        imagePullPolicy: Always
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 5
          tcpSocket:
            port: 9200
          timeoutSeconds: 3
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 120
          periodSeconds: 10
          tcpSocket:
            port: 9200
          timeoutSeconds: 3
        ports:
        - name: http
          containerPort: 9200
        - name: transport
          containerPort: 9300
        resources:
          requests:
            cpu: "1"
            memory: 4Gi
          limits:
            cpu: "4"
            memory: 4Gi
        args:
          - opensearch
          - -p
          - /usr/share/opensearch/os.pid
        command:
          - /usr/share/opensearch/opensearch-docker-entrypoint.sh
        lifecycle:
          preStop:
            exec:
              command:
                - sh
                - "-c"
                - "kill $(cat /usr/share/opensearch/os.pid)"
        volumeMounts:
        - name: "data"
          mountPath: /usr/share/opensearch/data
        - mountPath: /usr/share/opensearch/config/opensearch-security
          name: security-config-data
        - name: config
          mountPath: /usr/share/opensearch/config/opensearch.yml
          subPath: opensearch.yml
        - name: node-cert
          mountPath: /usr/share/opensearch/config/certs

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opensearch-cluster-warm
  labels:
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch-cluster-warm
spec:
  serviceName: opensearch-cluster-headless
  selector:
    matchLabels:
      app.kubernetes.io/name: opensearch
      app.kubernetes.io/instance: opensearch-cluster-warm
  replicas: 3
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - "ReadWriteOnce"
      resources:
        requests:
          storage: "125Gi"
      storageClassName: "opensearch-sc1"
  template:
    metadata:
      name: "opensearch-cluster-warm"
      labels:
        app.kubernetes.io/name: opensearch
        app.kubernetes.io/instance: opensearch-cluster-warm
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      serviceAccountName: "opensearch"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - opensearch
      terminationGracePeriodSeconds: 120
      volumes:
      - name: config
        configMap:
          name: opensearch-config
      - name: security-config-data
        secret:
          secretName: opensearch-securityconfig
      - name: node-cert
        secret:
          secretName: opensearch-cert
      enableServiceLinks: false
      containers:
      - name: "opensearch"
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        image: public.ecr.aws/r2h3l6e4/pingcloud-monitoring/opensearch/dev:v1.19-release-branch-latest
        imagePullPolicy: Always
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 5
          tcpSocket:
            port: 9200
          timeoutSeconds: 3
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 120
          periodSeconds: 10
          tcpSocket:
            port: 9200
          timeoutSeconds: 3
        ports:
        - name: http
          containerPort: 9200
        - name: transport
          containerPort: 9300
        resources:
          requests:
            cpu: "1"
            memory: 4Gi
          limits:
            cpu: "2"
            memory: 4Gi
        args:
          - opensearch
          - -p
          - /usr/share/opensearch/os.pid
        command:
          - /usr/share/opensearch/opensearch-docker-entrypoint.sh
        lifecycle:
          preStop:
            exec:
              command:
                - sh
                - "-c"
                - "kill $(cat /usr/share/opensearch/os.pid)"
        volumeMounts:
        - name: "data"
          mountPath: /usr/share/opensearch/data
        - mountPath: /usr/share/opensearch/config/opensearch-security
          name: security-config-data
        - name: config
          mountPath: /usr/share/opensearch/config/opensearch.yml
          subPath: opensearch.yml
        - name: node-cert
          mountPath: /usr/share/opensearch/config/certs
