k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-ui-ingress
spec:
  ingressClassName: nginx-public
  tls:
    - hosts:
        - logs.ping-demo.com
  rules:
    - host: logs.ping-demo.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: opensearch-dashboards
                port:
                  number: 5601
